name:                yi-config
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/yi-config#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable yi
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , microlens-platform
                     , mtl
                     , yi-core
                     , yi-frontend-vty
                     , yi-keymap-emacs
                     , yi-misc-modes
                     , yi-mode-haskell
                     , yi-mode-javascript
                     , yi-rope
                     , yi-fuzzy-open
  ghc-options: -O2 -threaded -Wall -ferror-spans
